Fixed scrollbar issue in Toolbox

--- a/little-ide/html/src/main/webapp/VAADIN/themes/littletheme/styles/little-toolbox.scss
+++ b/little-ide/html/src/main/webapp/VAADIN/themes/littletheme/styles/little-toolbox.scss
@@ -14,6 +14,7 @@
 /* Accordion Styles */
 
 .littletheme .l-toolbox-accordion {
+  overflow: hidden;
 }
 
 .littletheme .l-toolbox-accordion-item {
